Scroll Bar overlap issue fixed for Batch Execution

--- a/public/css/scroll.css
+++ b/public/css/scroll.css
@@ -554,9 +554,9 @@
     /*z-index: 50;*/
     /* overflow: auto; */
 }
-.batchSuites > .scroll-element.scroll-y{
+/*.batchSuites > .scroll-element.scroll-y{
 	z-index:60;
-}
+}*/
 .batchSuites > .scroll-element.scroll-y .scroll-bar{
 	background: #321e4f
 }
